# casino

./: .gitignore  CMakeLists.txt  README.md  design.md  makefile
games/: CMakeLists.txt  README.md  amazons.c  breakthrough.c  tictactoe.c
include/: casino.h
src/: CMakeLists.txt  actions.c  casino.c  casino_state.h  mcts.c  mcts.h  memory.c  memory.h  node.c  node.h  playout.c  random.c  selection.c  test.c  thread.c  thread.h
tests/: memory_tests.h  node_tests.h  test.c
